8171082: [AOT] AOT'd SystemModules.modules() fails to load when too large

Reviewed-by: kvn, redestad